<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.spire.ui.profile.EditProfileActivity">

    <!-- TOOLBAR -->
    <LinearLayout
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_profile_toolbar_height"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/edit_profile_toolbar_height"
            android:layout_height="@dimen/edit_profile_toolbar_height"
            android:padding="@dimen/edit_profile_toolbar_btn_padding"
            android:src="@drawable/ic_img_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ToolbarText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/edit_profile_toolbar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/edit_profile_dropdown_menu"
            android:layout_width="@dimen/edit_profile_toolbar_height"
            android:layout_height="@dimen/edit_profile_toolbar_height"
            android:padding="@dimen/edit_profile_toolbar_btn_padding"
            android:src="@drawable/ic_menu_dropdown" />

    </LinearLayout>

    <!-- Body -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_profile_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/edit_profile_padding_horizontal"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_toolbar">

        <!-- Profile Image -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/edit_profile_image"
            android:layout_width="@dimen/edit_profile_profile_image_size"
            android:layout_height="@dimen/edit_profile_profile_image_size"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_profile_image_large"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile_change_photo_btn"
            style="@style/ImgEditBtn"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_change_photo"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_image" />

        <!-- Email -->
        <TextView
            android:id="@+id/edit_profile_email_title"
            style="@style/edit_profile_content_title"
            android:layout_marginTop="30dp"
            android:text="@string/edit_profile_hint_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_change_photo_btn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_email_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username -->
        <TextView
            android:id="@+id/edit_profile_username_title"
            style="@style/edit_profile_content_title"
            android:layout_marginTop="15dp"
            android:text="@string/edit_profile_hint_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_email_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_username_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_username_title"
            app:prefixText="\@">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Bio -->
        <TextView
            android:id="@+id/edit_profile_bio_title"
            style="@style/edit_profile_content_title"
            android:layout_marginTop="15dp"
            android:text="@string/edit_profile_hint_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_username_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_bio_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_bio_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_bio_edit_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:inputType="textMultiLine"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile_save_btn"
            style="@style/ImgEditBtn"
            android:layout_marginTop="30dp"
            android:text="@string/edit_profile_save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_bio_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>