<resources>
    <string name="app_name">Spire</string>
    <string name="title_activity_sign_in">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_image_edit">ImageEditActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_post">Post</string>
    <string name="title_relationship">Followers &amp; Followings</string>

    <!-- Prompt Dialog -->
    <string name="prompt_dialog_hint">✨What are you inspired with?</string>
    <string name="prompt_dialog_button">Generate</string>
    <string name="prompt_dialog_cancel">Cancel</string>

    <!-- image edit activities -->
    <string name="bottom_sheet_camera">Take a picture</string>
    <string name="bottom_sheet_gallery">Choose from gallery</string>
    <string name="bottom_sheet_new">Generate new image</string>
    <string name="title_toolbar_image_edit">Recreate Your Image</string>
    <string name="prompt_suggestion_button">sunglasses</string>
    <string name="prompt_hint">How do you want to change?</string>
    <string name="next_button">Next</string>
    <string name="generate_button">Generate</string>
    <string name="title_create_post">Create Post</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="mask_generate_button">Try Auto-Painting!</string>
    <string name="recreate_your_image">Recreate Your Image as You Like!</string>

    <!-- image edit tooltip -->
    <string name="tooltip_title_1">Where do you want to change?</string>
    <string name="tooltip_content_1">Please paint the part as blue.\nUnpainted parts will not be edited.</string>
    <string name="tooltip_title_2">How do you want to change?</string>
    <string name="tooltip_content_2">Please describe the overall image clearly in English.\nPlease separate with commas.</string>

    <!-- write text activity -->
    <string name="title_toolbar_write_text">Select Your Image</string>
    <string name="post_text_hint">What do you want to say?</string>
    <string name="done_button">Post!</string>
    <string name="loading_text">Recreating your image…</string>
    <string name="loading_time_text">Might take up to 5 seconds</string>
    <string name="swipe_text">Swipe to see more images</string>
    <string name="regenerate">Regenerate</string>
    <string name="describe_your_image">Describe your image</string>
    <string name="only_this_image">Only the image on screen will be posted</string>


    <!-- Auth activities -->
    <string name="email_helper_text">Must be a valid email address</string>
    <string name="password_helper_text">Must be at least 8 characters</string>
    <string name="username_helper_text">Must be at least 6 characters</string>
    <string name="email_hint">Sign up with Email</string>
    <string name="login_email_hint">Sign in with Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="signup_btn">Sign Up</string>
    <string name="verify_email">Send Verification Mail</string>
    <string name="verification_guide_title">We have sent verification code!</string>
    <string name="verification_guide_content">Please check your email and enter the code below.</string>
    <string name="verification_send_again">Send again</string>
    <string name="login_btn">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="password_pattern_toggle">\?</string>
    <string name="password_popup_title">Your Password Must:</string>
    <string name="password_rule_1"> ✦ Be at least 8 characters</string>
    <string name="password_rule_2"> ✦ Contain at least 1 alphabet</string>
    <string name="password_rule_3"> ✦ Contain at least 1 number</string>
    <string name="password_rule_4"> ✦ Contain at least 1 special character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- feed, post and comment -->
    <string name="comment_write_hint">Write your comment here</string>
    <string name="post_edit_save_btn">Save</string>


    <!-- Profile -->
    <string name="profile_username">\@username</string>
    <string name="profile_bio">This is my bio</string>
    <string name="profile_edit_btn">Edit Profile</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_follow_requested">Follow Requested</string>
    <string name="edit_profile_toolbar">Edit Your Profile</string>
    <string name="edit_profile_change_photo">Change</string>
    <string name="edit_profile_hint_email">Email</string>
    <string name="edit_profile_hint_username">Username</string>
    <string name="edit_profile_hint_bio">Bio</string>
    <string name="edit_profile_hint_password">Password</string>
    <string name="edit_profile_save_btn">Save</string>
    <string name="edit_profile_logout_btn">Log out</string>
    <string name="edit_profile_delete_account_btn">Delete Account</string>
    <string name="logout_dialog_text">Do you really want to log out?</string>
    <string name="delete_account_dialog_text">Are you sure you want to delete your account?\nThis job cannot be undone.</string>

    <!-- Followers & Following -->
    <string name="relationship_followers">Followers</string>
    <string name="relationship_following">Following</string>
    <string name="relationship_empty_text">Nothing to show</string>

    <!-- Search -->
    <string name="search_bar_hint">Search People by Username</string>

    <!-- Notifications -->
    <string name="notifications_title">Notifications</string>
    <string name="notifications_nothing_to_show">Nothing to show</string>
    <string name="notifications_follow_request">wants to follow you</string>
    <string name="notifications_liked_your_post">liked your post</string>
    <string name="notifications_commented_your_post">commented on your post</string>
    <string name="notifications_follow_accept">accepted your follow request</string>
    <string name="notifications_liked_your_comment">likes your comment</string>

    <!-- Error -->
    <string name="error_title">Oops!</string>
    <string name="error_text">We\'re so sorry. Something went wrong.</string>
    <string name="error_text_2">Please try again later.</string>
    <string name="error_text_connection">Please check your internet connection and try again.</string>

    <string name="error_exit_button">Exit</string>
    <string name="error_restart_button">Restart</string>


</resources>