<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/auth_padding"
    tools:context="com.project.spire.ui.auth.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/auth_logo_width"
        android:layout_height="@dimen/auth_logo_height"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:hint="@string/login_email_hint"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/email_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="25dp"
            android:text="@string/login_btn"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout">

    </com.google.android.material.progressindicator.CircularProgressIndicator>


    <TextView
        android:id="@+id/sign_up_text"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/go_to_sign_up_text_btn" />

    <TextView
        android:id="@+id/go_to_sign_up_text_btn"
        style="@style/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sign_up_text"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>